export default {
	general: {
		cancel: 'Cancel',
		continue: 'Continue',
		confirm: 'Confirm',
		done: 'Done',
		apply: 'Apply',
		save: 'Save',
		welcome_back: 'Welcome back',
		search: 'Search',
		select: 'Select',
		sign_out: 'Sign Out',
...
		notification_archived: 'Notification archived',
		notification_unarchived: 'Notification unarchived',
		required_actions_must_be_solved: 'Required actions must be solved first',
		undo: 'Undo',
	},
	documents: {
		documents: 'Documents',
		document: 'Document',
		documents_description: 'Manage and access your documents',
		all_files: 'All files',
		no_documents: 'No documents',
		no_documents_found: 'No documents found',
		no_documents_description: 'You have not uploaded any documents yet',
		no_recent_viewed_documents_found: 'No recently viewed documents',
		no_recent_viewed_documents_description:
			'You have not viewed any documents recently',
		matching_search_results: 'Matching search results',
		required_documents: 'Required documents',
		see_more: 'See more',
		no_required_documents: 'No required documents',
		you_are_up_to_date: 'Great! You are up to date!',
		download: 'Download',
		recent_searches: 'Recent searches',
		files: 'Files',
...
		verify_error: 'Invalid code. Please try again.',
	},
	alerts: {
		permission_required: 'Permission required',
		permission_camera_roll:
			'Sorry, we need camera roll permissions to make this work!',
		select_source: 'Select Source',
		select_source_document: 'Choose how you want to add your document',
		select_source_photo: 'Choose how you want to add your photo',
		camera: 'Camera',
		photo_library: 'Photo Library',
		files: 'Files',
		success: 'Success',
		file_downloaded: 'File downloaded to: {{path}}',
		failed_download_url: 'Failed to get download URL',
		failed_download: 'Failed to download file. Please try again.',
	},
...
